// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sqle/components/ReportDrawer render snap is empty 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-drawer ant-drawer-right css-dev-only-do-not-override-txh9fw ant-drawer-open"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 720px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content basic-drawer-wrapper drawer-wrapper-no-padding css-1q29jje"
          role="dialog"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-header"
            >
              <div
                class="ant-drawer-header-title"
              >
                <div
                  class="ant-drawer-title"
                >
                  this is a title
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-body"
            >
              <div
                class="closed-icon-custom"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="audit-report-wrapper css-17ud12h"
              >
                <div
                  class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
                >
                  <div>
                    <div
                      aria-busy="true"
                      aria-live="polite"
                      class="ant-spin ant-spin-spinning css-dev-only-do-not-override-txh9fw"
                    >
                      <span
                        class="ant-spin-dot ant-spin-dot-spin"
                      >
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                      </span>
                    </div>
                  </div>
                  <div
                    class="ant-spin-container ant-spin-blur"
                  >
                    <section
                      class="wrapper-item"
                    >
                      <h3
                        class="ant-typography css-dev-only-do-not-override-txh9fw"
                      >
                        审核结果
                      </h3>
                      <div
                        class="wrapper-cont"
                      >
                        <div
                          class="result-item css-1avyf41"
                        >
                          <span
                            class="icon-wrapper"
                          >
                            <svg
                              height="20"
                              viewBox="0 0 20 20"
                              width="20"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M10 18.333a8.333 8.333 0 1 1 0-16.666 8.333 8.333 0 1 1 0 16.666m-.83-5 5.89-5.892-1.177-1.178-4.714 4.714-2.357-2.358-1.179 1.179z"
                                fill="#41BF9A"
                              />
                            </svg>
                          </span>
                          <span
                            class="text-wrapper"
                          >
                            审核通过
                          </span>
                        </div>
                      </div>
                    </section>
                    <section
                      class="wrapper-item skipped-rule-wrapper"
                    >
                      <h3
                        class="ant-typography css-dev-only-do-not-override-txh9fw"
                      >
                        已设例外的规则
                      </h3>
                      <div
                        class="wrapper-cont"
                      >
                        <div
                          class="css-dev-only-do-not-override-txh9fw ant-empty is-icon-tips css-19kysfv"
                        >
                          <div
                            class="ant-empty-image"
                          >
                            <svg
                              fill="none"
                              height="80"
                              viewBox="0 0 80 80"
                              width="80"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <g
                                clip-path="url(#clip0_1412_15009)"
                              >
                                <path
                                  d="M0 56.5643C0 61.4398 17.8769 65.3152 40.0043 65.3152C62.1316 65.3152 80.0086 61.4398 80.0086 56.5643C80.0086 51.6887 62.1317 47.8134 40.0043 47.8134C17.8768 47.8134 0 51.6888 0 56.5643Z"
                                  fill="#EBEAE7"
                                />
                                <path
                                  d="M52.0055 35.1869C52.0055 33.1867 53.2557 31.5615 54.7558 31.5615H68.7573V54.189C68.7573 56.8142 67.1322 59.0645 65.132 59.0645H15.0016C13.0014 59.0645 11.2512 56.9393 11.2512 54.189V31.5615H25.2527C26.7528 31.5615 28.003 33.1867 28.003 35.1869C28.003 37.1871 29.2531 38.8123 30.7533 38.8123H49.2553C50.7554 38.8123 52.0055 37.1871 52.0055 35.1869Z"
                                  fill="#F2F1EF"
                                />
                                <path
                                  d="M56.6311 16.56C56.0061 15.4349 55.0059 14.8098 53.6308 14.6848H26.3779C25.1277 14.8098 24.0026 15.4349 23.5026 16.56L10.6262 30.9365V54.189C10.6262 57.1893 12.5014 59.6896 15.0016 59.6896H65.007C67.3823 59.6896 69.2575 57.1893 69.2575 54.189V30.9365L56.6311 16.56ZM24.3777 17.3101C24.8777 16.435 25.5028 16.0599 26.3779 15.935H53.6308C54.5059 15.935 55.131 16.435 55.506 17.1851L67.6323 30.9365H54.7559C52.8807 30.9365 51.3805 32.8117 51.3805 35.187C51.3805 36.8122 50.3804 38.1873 49.2553 38.1873H30.7533C29.5032 38.1873 28.6281 36.8122 28.6281 35.187C28.6281 32.8117 27.128 30.9365 25.2528 30.9365H12.3763L24.3777 17.3101ZM68.1323 54.189C68.1323 56.4393 66.7572 58.4395 65.132 58.4395H15.0016C13.2515 58.4395 11.8763 56.5643 11.8763 54.189V32.1867H25.2528C26.3779 32.1867 27.378 33.5618 27.378 35.312C27.378 37.6873 28.8781 39.5625 30.7533 39.5625H49.2553C51.1306 39.5625 52.6307 37.6873 52.6307 35.312C52.6307 33.6868 53.6308 32.3117 54.7559 32.3117H68.0073V54.189H68.1323Z"
                                  fill="#E6E4E3"
                                />
                              </g>
                              <defs>
                                <clippath
                                  id="clip0_1412_15009"
                                >
                                  <rect
                                    fill="white"
                                    height="80"
                                    width="80"
                                  />
                                </clippath>
                              </defs>
                            </svg>
                          </div>
                          <div
                            class="ant-empty-description"
                          >
                            <span
                              class="no-data-cont"
                            >
                              暂无已设例外的规则
                            </span>
                          </div>
                          <div
                            class="ant-empty-footer"
                          />
                        </div>
                      </div>
                    </section>
                  </div>
                </div>
                <section
                  class="wrapper-item"
                >
                  <div
                    class="title-wrap"
                  >
                    <h3
                      class="ant-typography css-dev-only-do-not-override-txh9fw"
                    >
                      SQL语句
                    </h3>
                  </div>
                  <div
                    class="wrapper-cont"
                  >
                    <input
                      class="actiontech-sql-view-only-editor-renderer-wrapper custom-monaco-editor css-baixa9"
                      height="90%"
                      language="sql"
                      options="{"readOnly":true,"automaticLayout":true,"minimap":{"enabled":false},"fontFamily":"SF Mono","fontSize":14,"fontWeight":"400","lineNumbersMinChars":2,"suggestFontSize":14}"
                      value=""
                      width="100%"
                    />
                  </div>
                </section>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;

exports[`sqle/components/ReportDrawer render snap open is false 1`] = `
<body>
  <div />
</body>
`;

exports[`sqle/components/ReportDrawer render snap when has data 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-drawer ant-drawer-right css-dev-only-do-not-override-txh9fw ant-drawer-open"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 720px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content basic-drawer-wrapper drawer-wrapper-no-padding css-1q29jje"
          role="dialog"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-header"
            >
              <div
                class="ant-drawer-header-title"
              >
                <div
                  class="ant-drawer-title"
                >
                  this is a title
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-body"
            >
              <div
                class="closed-icon-custom"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="audit-report-wrapper css-17ud12h"
              >
                <div
                  class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
                >
                  <div>
                    <div
                      aria-busy="true"
                      aria-live="polite"
                      class="ant-spin ant-spin-spinning css-dev-only-do-not-override-txh9fw"
                    >
                      <span
                        class="ant-spin-dot ant-spin-dot-spin"
                      >
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                      </span>
                    </div>
                  </div>
                  <div
                    class="ant-spin-container ant-spin-blur"
                  >
                    <section
                      class="wrapper-item"
                    >
                      <h3
                        class="ant-typography css-dev-only-do-not-override-txh9fw"
                      >
                        审核结果
                      </h3>
                      <div
                        class="wrapper-cont"
                      >
                        <div
                          class="result-item"
                        >
                          <div
                            class=" css-1v03opz"
                          >
                            <div
                              class="css-1avyf41"
                            >
                              <span
                                class="icon-wrapper"
                              />
                              <span
                                class="text-wrapper"
                              >
                                message
                              </span>
                            </div>
                            <div
                              class="annotation-wrapper"
                            >
                              annotation
                            </div>
                          </div>
                        </div>
                      </div>
                    </section>
                    <section
                      class="wrapper-item skipped-rule-wrapper"
                    >
                      <h3
                        class="ant-typography css-dev-only-do-not-override-txh9fw"
                      >
                        已设例外的规则
                      </h3>
                      <div
                        class="wrapper-cont"
                      >
                        <div
                          class="css-dev-only-do-not-override-txh9fw ant-empty is-icon-tips css-19kysfv"
                        >
                          <div
                            class="ant-empty-image"
                          >
                            <svg
                              fill="none"
                              height="80"
                              viewBox="0 0 80 80"
                              width="80"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <g
                                clip-path="url(#clip0_1412_15009)"
                              >
                                <path
                                  d="M0 56.5643C0 61.4398 17.8769 65.3152 40.0043 65.3152C62.1316 65.3152 80.0086 61.4398 80.0086 56.5643C80.0086 51.6887 62.1317 47.8134 40.0043 47.8134C17.8768 47.8134 0 51.6888 0 56.5643Z"
                                  fill="#EBEAE7"
                                />
                                <path
                                  d="M52.0055 35.1869C52.0055 33.1867 53.2557 31.5615 54.7558 31.5615H68.7573V54.189C68.7573 56.8142 67.1322 59.0645 65.132 59.0645H15.0016C13.0014 59.0645 11.2512 56.9393 11.2512 54.189V31.5615H25.2527C26.7528 31.5615 28.003 33.1867 28.003 35.1869C28.003 37.1871 29.2531 38.8123 30.7533 38.8123H49.2553C50.7554 38.8123 52.0055 37.1871 52.0055 35.1869Z"
                                  fill="#F2F1EF"
                                />
                                <path
                                  d="M56.6311 16.56C56.0061 15.4349 55.0059 14.8098 53.6308 14.6848H26.3779C25.1277 14.8098 24.0026 15.4349 23.5026 16.56L10.6262 30.9365V54.189C10.6262 57.1893 12.5014 59.6896 15.0016 59.6896H65.007C67.3823 59.6896 69.2575 57.1893 69.2575 54.189V30.9365L56.6311 16.56ZM24.3777 17.3101C24.8777 16.435 25.5028 16.0599 26.3779 15.935H53.6308C54.5059 15.935 55.131 16.435 55.506 17.1851L67.6323 30.9365H54.7559C52.8807 30.9365 51.3805 32.8117 51.3805 35.187C51.3805 36.8122 50.3804 38.1873 49.2553 38.1873H30.7533C29.5032 38.1873 28.6281 36.8122 28.6281 35.187C28.6281 32.8117 27.128 30.9365 25.2528 30.9365H12.3763L24.3777 17.3101ZM68.1323 54.189C68.1323 56.4393 66.7572 58.4395 65.132 58.4395H15.0016C13.2515 58.4395 11.8763 56.5643 11.8763 54.189V32.1867H25.2528C26.3779 32.1867 27.378 33.5618 27.378 35.312C27.378 37.6873 28.8781 39.5625 30.7533 39.5625H49.2553C51.1306 39.5625 52.6307 37.6873 52.6307 35.312C52.6307 33.6868 53.6308 32.3117 54.7559 32.3117H68.0073V54.189H68.1323Z"
                                  fill="#E6E4E3"
                                />
                              </g>
                              <defs>
                                <clippath
                                  id="clip0_1412_15009"
                                >
                                  <rect
                                    fill="white"
                                    height="80"
                                    width="80"
                                  />
                                </clippath>
                              </defs>
                            </svg>
                          </div>
                          <div
                            class="ant-empty-description"
                          >
                            <span
                              class="no-data-cont"
                            >
                              暂无已设例外的规则
                            </span>
                          </div>
                          <div
                            class="ant-empty-footer"
                          />
                        </div>
                      </div>
                    </section>
                  </div>
                </div>
                <section
                  class="wrapper-item"
                >
                  <div
                    class="title-wrap"
                  >
                    <h3
                      class="ant-typography css-dev-only-do-not-override-txh9fw"
                    >
                      SQL语句
                    </h3>
                  </div>
                  <div
                    class="wrapper-cont"
                  >
                    <input
                      class="actiontech-sql-view-only-editor-renderer-wrapper custom-monaco-editor css-baixa9"
                      height="90%"
                      language="sql"
                      options="{"readOnly":true,"automaticLayout":true,"minimap":{"enabled":false},"fontFamily":"SF Mono","fontSize":14,"fontWeight":"400","lineNumbersMinChars":2,"suggestFontSize":14}"
                      value="select 1"
                      width="100%"
                    />
                  </div>
                </section>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;

exports[`sqle/components/ReportDrawer render snap when has delete rule 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-drawer ant-drawer-right css-dev-only-do-not-override-txh9fw ant-drawer-open"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 720px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content basic-drawer-wrapper drawer-wrapper-no-padding css-1q29jje"
          role="dialog"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-header"
            >
              <div
                class="ant-drawer-header-title"
              >
                <div
                  class="ant-drawer-title"
                >
                  this is a title
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-body"
            >
              <div
                class="closed-icon-custom"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="audit-report-wrapper css-17ud12h"
              >
                <div
                  class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
                >
                  <div>
                    <div
                      aria-busy="true"
                      aria-live="polite"
                      class="ant-spin ant-spin-spinning css-dev-only-do-not-override-txh9fw"
                    >
                      <span
                        class="ant-spin-dot ant-spin-dot-spin"
                      >
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                      </span>
                    </div>
                  </div>
                  <div
                    class="ant-spin-container ant-spin-blur"
                  >
                    <section
                      class="wrapper-item"
                    >
                      <h3
                        class="ant-typography css-dev-only-do-not-override-txh9fw"
                      >
                        审核结果
                      </h3>
                      <div
                        class="wrapper-cont"
                      >
                        <div
                          class="result-item"
                        >
                          <div
                            class="has-delete-rule-wrapper css-1v03opz"
                          >
                            <span
                              class="ant-tag ant-tag-volcano message-rule-disabled css-dev-only-do-not-override-txh9fw"
                            >
                              该规则已删除
                            </span>
                            <div
                              class="css-1avyf41"
                            >
                              <span
                                class="icon-wrapper"
                              />
                              <span
                                class="text-wrapper"
                              >
                                message1
                              </span>
                            </div>
                          </div>
                        </div>
                        <div
                          class="result-item"
                        >
                          <div
                            class=" css-1v03opz"
                          >
                            <div
                              class="css-1avyf41"
                            >
                              <span
                                class="icon-wrapper"
                              />
                              <span
                                class="text-wrapper"
                              >
                                message2
                              </span>
                            </div>
                            <div
                              class="annotation-wrapper"
                            >
                              annotation
                            </div>
                          </div>
                        </div>
                      </div>
                    </section>
                    <section
                      class="wrapper-item skipped-rule-wrapper"
                    >
                      <h3
                        class="ant-typography css-dev-only-do-not-override-txh9fw"
                      >
                        已设例外的规则
                      </h3>
                      <div
                        class="wrapper-cont"
                      >
                        <div
                          class="css-dev-only-do-not-override-txh9fw ant-empty is-icon-tips css-19kysfv"
                        >
                          <div
                            class="ant-empty-image"
                          >
                            <svg
                              fill="none"
                              height="80"
                              viewBox="0 0 80 80"
                              width="80"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <g
                                clip-path="url(#clip0_1412_15009)"
                              >
                                <path
                                  d="M0 56.5643C0 61.4398 17.8769 65.3152 40.0043 65.3152C62.1316 65.3152 80.0086 61.4398 80.0086 56.5643C80.0086 51.6887 62.1317 47.8134 40.0043 47.8134C17.8768 47.8134 0 51.6888 0 56.5643Z"
                                  fill="#EBEAE7"
                                />
                                <path
                                  d="M52.0055 35.1869C52.0055 33.1867 53.2557 31.5615 54.7558 31.5615H68.7573V54.189C68.7573 56.8142 67.1322 59.0645 65.132 59.0645H15.0016C13.0014 59.0645 11.2512 56.9393 11.2512 54.189V31.5615H25.2527C26.7528 31.5615 28.003 33.1867 28.003 35.1869C28.003 37.1871 29.2531 38.8123 30.7533 38.8123H49.2553C50.7554 38.8123 52.0055 37.1871 52.0055 35.1869Z"
                                  fill="#F2F1EF"
                                />
                                <path
                                  d="M56.6311 16.56C56.0061 15.4349 55.0059 14.8098 53.6308 14.6848H26.3779C25.1277 14.8098 24.0026 15.4349 23.5026 16.56L10.6262 30.9365V54.189C10.6262 57.1893 12.5014 59.6896 15.0016 59.6896H65.007C67.3823 59.6896 69.2575 57.1893 69.2575 54.189V30.9365L56.6311 16.56ZM24.3777 17.3101C24.8777 16.435 25.5028 16.0599 26.3779 15.935H53.6308C54.5059 15.935 55.131 16.435 55.506 17.1851L67.6323 30.9365H54.7559C52.8807 30.9365 51.3805 32.8117 51.3805 35.187C51.3805 36.8122 50.3804 38.1873 49.2553 38.1873H30.7533C29.5032 38.1873 28.6281 36.8122 28.6281 35.187C28.6281 32.8117 27.128 30.9365 25.2528 30.9365H12.3763L24.3777 17.3101ZM68.1323 54.189C68.1323 56.4393 66.7572 58.4395 65.132 58.4395H15.0016C13.2515 58.4395 11.8763 56.5643 11.8763 54.189V32.1867H25.2528C26.3779 32.1867 27.378 33.5618 27.378 35.312C27.378 37.6873 28.8781 39.5625 30.7533 39.5625H49.2553C51.1306 39.5625 52.6307 37.6873 52.6307 35.312C52.6307 33.6868 53.6308 32.3117 54.7559 32.3117H68.0073V54.189H68.1323Z"
                                  fill="#E6E4E3"
                                />
                              </g>
                              <defs>
                                <clippath
                                  id="clip0_1412_15009"
                                >
                                  <rect
                                    fill="white"
                                    height="80"
                                    width="80"
                                  />
                                </clippath>
                              </defs>
                            </svg>
                          </div>
                          <div
                            class="ant-empty-description"
                          >
                            <span
                              class="no-data-cont"
                            >
                              暂无已设例外的规则
                            </span>
                          </div>
                          <div
                            class="ant-empty-footer"
                          />
                        </div>
                      </div>
                    </section>
                  </div>
                </div>
                <section
                  class="wrapper-item"
                >
                  <div
                    class="title-wrap"
                  >
                    <h3
                      class="ant-typography css-dev-only-do-not-override-txh9fw"
                    >
                      SQL语句
                    </h3>
                    <div
                      class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-right: 8px;"
                      >
                        <span
                          class="ant-tag ant-tag-default ellipsis-column-width basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-txh9fw"
                        >
                          <svg
                            color="#4583FF"
                            height="18"
                            viewBox="0 0 18 19"
                            width="18"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M15 17H3a.75.75 0 0 1-.75-.75V2.75A.75.75 0 0 1 3 2h12a.75.75 0 0 1 .75.75v13.5A.75.75 0 0 1 15 17M6 5.75v1.5h6v-1.5zm0 3v1.5h6v-1.5zm0 3v1.5h3.75v-1.5z"
                              fill="currentColor"
                            />
                          </svg>
                          <span>
                            <span
                              class="sql-source-title"
                            >
                              所在文件
                            </span>
                            <div
                              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line margin-bottom-0 sql-source-content basic-typography-ellipsis css-wgj5gs css-dev-only-do-not-override-txh9fw"
                            >
                              file_source
                            </div>
                          </span>
                        </span>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <span
                          class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-txh9fw"
                        >
                          <svg
                            height="18"
                            viewBox="0 0 1024 1024"
                            width="18"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M512 938.667c-53.333 0-384-257.259-384-469.334s171.925-384 384-384 384 171.926 384 384-330.667 469.334-384 469.334m0-352c64.8 0 117.333-52.534 117.333-117.334S576.8 352 512 352s-117.333 52.533-117.333 117.333S447.2 586.667 512 586.667"
                              fill="#4583FF"
                            />
                          </svg>
                          <span>
                            <span
                              class="sql-source-title"
                            >
                              所在行
                            </span>
                            3
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="wrapper-cont"
                  >
                    <input
                      class="actiontech-sql-view-only-editor-renderer-wrapper custom-monaco-editor css-baixa9"
                      height="90%"
                      language="sql"
                      options="{"readOnly":true,"automaticLayout":true,"minimap":{"enabled":false},"fontFamily":"SF Mono","fontSize":14,"fontWeight":"400","lineNumbersMinChars":2,"suggestFontSize":14}"
                      value="select 1"
                      width="100%"
                    />
                  </div>
                </section>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;

exports[`sqle/components/ReportDrawer render snap when has extra 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-drawer ant-drawer-right css-dev-only-do-not-override-txh9fw ant-drawer-open"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 720px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content basic-drawer-wrapper drawer-wrapper-no-padding css-1q29jje"
          role="dialog"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-header"
            >
              <div
                class="ant-drawer-header-title"
              >
                <div
                  class="ant-drawer-title"
                >
                  this is a title
                </div>
              </div>
              <div
                class="ant-drawer-extra"
              >
                <div>
                  extra
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-body"
            >
              <div
                class="closed-icon-custom"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="audit-report-wrapper css-17ud12h"
              >
                <div
                  class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
                >
                  <div>
                    <div
                      aria-busy="true"
                      aria-live="polite"
                      class="ant-spin ant-spin-spinning css-dev-only-do-not-override-txh9fw"
                    >
                      <span
                        class="ant-spin-dot ant-spin-dot-spin"
                      >
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                      </span>
                    </div>
                  </div>
                  <div
                    class="ant-spin-container ant-spin-blur"
                  >
                    <section
                      class="wrapper-item"
                    >
                      <h3
                        class="ant-typography css-dev-only-do-not-override-txh9fw"
                      >
                        审核结果
                      </h3>
                      <div
                        class="wrapper-cont"
                      >
                        <div
                          class="result-item"
                        >
                          <div
                            class=" css-1v03opz"
                          >
                            <div
                              class="css-1avyf41"
                            >
                              <span
                                class="icon-wrapper"
                              />
                              <span
                                class="text-wrapper"
                              >
                                message
                              </span>
                            </div>
                            <div
                              class="annotation-wrapper"
                            >
                              annotation
                            </div>
                          </div>
                        </div>
                      </div>
                    </section>
                    <section
                      class="wrapper-item skipped-rule-wrapper"
                    >
                      <h3
                        class="ant-typography css-dev-only-do-not-override-txh9fw"
                      >
                        已设例外的规则
                      </h3>
                      <div
                        class="wrapper-cont"
                      >
                        <div
                          class="css-dev-only-do-not-override-txh9fw ant-empty is-icon-tips css-19kysfv"
                        >
                          <div
                            class="ant-empty-image"
                          >
                            <svg
                              fill="none"
                              height="80"
                              viewBox="0 0 80 80"
                              width="80"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <g
                                clip-path="url(#clip0_1412_15009)"
                              >
                                <path
                                  d="M0 56.5643C0 61.4398 17.8769 65.3152 40.0043 65.3152C62.1316 65.3152 80.0086 61.4398 80.0086 56.5643C80.0086 51.6887 62.1317 47.8134 40.0043 47.8134C17.8768 47.8134 0 51.6888 0 56.5643Z"
                                  fill="#EBEAE7"
                                />
                                <path
                                  d="M52.0055 35.1869C52.0055 33.1867 53.2557 31.5615 54.7558 31.5615H68.7573V54.189C68.7573 56.8142 67.1322 59.0645 65.132 59.0645H15.0016C13.0014 59.0645 11.2512 56.9393 11.2512 54.189V31.5615H25.2527C26.7528 31.5615 28.003 33.1867 28.003 35.1869C28.003 37.1871 29.2531 38.8123 30.7533 38.8123H49.2553C50.7554 38.8123 52.0055 37.1871 52.0055 35.1869Z"
                                  fill="#F2F1EF"
                                />
                                <path
                                  d="M56.6311 16.56C56.0061 15.4349 55.0059 14.8098 53.6308 14.6848H26.3779C25.1277 14.8098 24.0026 15.4349 23.5026 16.56L10.6262 30.9365V54.189C10.6262 57.1893 12.5014 59.6896 15.0016 59.6896H65.007C67.3823 59.6896 69.2575 57.1893 69.2575 54.189V30.9365L56.6311 16.56ZM24.3777 17.3101C24.8777 16.435 25.5028 16.0599 26.3779 15.935H53.6308C54.5059 15.935 55.131 16.435 55.506 17.1851L67.6323 30.9365H54.7559C52.8807 30.9365 51.3805 32.8117 51.3805 35.187C51.3805 36.8122 50.3804 38.1873 49.2553 38.1873H30.7533C29.5032 38.1873 28.6281 36.8122 28.6281 35.187C28.6281 32.8117 27.128 30.9365 25.2528 30.9365H12.3763L24.3777 17.3101ZM68.1323 54.189C68.1323 56.4393 66.7572 58.4395 65.132 58.4395H15.0016C13.2515 58.4395 11.8763 56.5643 11.8763 54.189V32.1867H25.2528C26.3779 32.1867 27.378 33.5618 27.378 35.312C27.378 37.6873 28.8781 39.5625 30.7533 39.5625H49.2553C51.1306 39.5625 52.6307 37.6873 52.6307 35.312C52.6307 33.6868 53.6308 32.3117 54.7559 32.3117H68.0073V54.189H68.1323Z"
                                  fill="#E6E4E3"
                                />
                              </g>
                              <defs>
                                <clippath
                                  id="clip0_1412_15009"
                                >
                                  <rect
                                    fill="white"
                                    height="80"
                                    width="80"
                                  />
                                </clippath>
                              </defs>
                            </svg>
                          </div>
                          <div
                            class="ant-empty-description"
                          >
                            <span
                              class="no-data-cont"
                            >
                              暂无已设例外的规则
                            </span>
                          </div>
                          <div
                            class="ant-empty-footer"
                          />
                        </div>
                      </div>
                    </section>
                  </div>
                </div>
                <section
                  class="wrapper-item"
                >
                  <div
                    class="title-wrap"
                  >
                    <h3
                      class="ant-typography css-dev-only-do-not-override-txh9fw"
                    >
                      SQL语句
                    </h3>
                  </div>
                  <div
                    class="wrapper-cont"
                  >
                    <input
                      class="actiontech-sql-view-only-editor-renderer-wrapper custom-monaco-editor css-baixa9"
                      height="90%"
                      language="sql"
                      options="{"readOnly":true,"automaticLayout":true,"minimap":{"enabled":false},"fontFamily":"SF Mono","fontSize":14,"fontWeight":"400","lineNumbersMinChars":2,"suggestFontSize":14}"
                      value="select 1"
                      width="100%"
                    />
                  </div>
                </section>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;

exports[`sqle/components/ReportDrawer render snap when loading is true 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-drawer ant-drawer-right css-dev-only-do-not-override-txh9fw ant-drawer-open"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 720px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content basic-drawer-wrapper drawer-wrapper-no-padding css-1q29jje"
          role="dialog"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-header"
            >
              <div
                class="ant-drawer-header-title"
              >
                <div
                  class="ant-drawer-title"
                >
                  this is a title
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-body"
            >
              <div
                class="closed-icon-custom"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="audit-report-wrapper css-17ud12h"
              >
                <div
                  class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
                >
                  <div>
                    <div
                      aria-busy="true"
                      aria-live="polite"
                      class="ant-spin ant-spin-spinning css-dev-only-do-not-override-txh9fw"
                    >
                      <span
                        class="ant-spin-dot ant-spin-dot-spin"
                      >
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                      </span>
                    </div>
                  </div>
                  <div
                    class="ant-spin-container ant-spin-blur"
                  >
                    <section
                      class="wrapper-item"
                    >
                      <h3
                        class="ant-typography css-dev-only-do-not-override-txh9fw"
                      >
                        审核结果
                      </h3>
                      <div
                        class="wrapper-cont"
                      >
                        <div
                          class="result-item"
                        >
                          <div
                            class=" css-1v03opz"
                          >
                            <div
                              class="css-1avyf41"
                            >
                              <span
                                class="icon-wrapper"
                              />
                              <span
                                class="text-wrapper"
                              >
                                message
                              </span>
                            </div>
                            <div
                              class="annotation-wrapper"
                            >
                              annotation
                            </div>
                          </div>
                        </div>
                      </div>
                    </section>
                    <section
                      class="wrapper-item skipped-rule-wrapper"
                    >
                      <h3
                        class="ant-typography css-dev-only-do-not-override-txh9fw"
                      >
                        已设例外的规则
                      </h3>
                      <div
                        class="wrapper-cont"
                      >
                        <div
                          class="css-dev-only-do-not-override-txh9fw ant-empty is-icon-tips css-19kysfv"
                        >
                          <div
                            class="ant-empty-image"
                          >
                            <svg
                              fill="none"
                              height="80"
                              viewBox="0 0 80 80"
                              width="80"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <g
                                clip-path="url(#clip0_1412_15009)"
                              >
                                <path
                                  d="M0 56.5643C0 61.4398 17.8769 65.3152 40.0043 65.3152C62.1316 65.3152 80.0086 61.4398 80.0086 56.5643C80.0086 51.6887 62.1317 47.8134 40.0043 47.8134C17.8768 47.8134 0 51.6888 0 56.5643Z"
                                  fill="#EBEAE7"
                                />
                                <path
                                  d="M52.0055 35.1869C52.0055 33.1867 53.2557 31.5615 54.7558 31.5615H68.7573V54.189C68.7573 56.8142 67.1322 59.0645 65.132 59.0645H15.0016C13.0014 59.0645 11.2512 56.9393 11.2512 54.189V31.5615H25.2527C26.7528 31.5615 28.003 33.1867 28.003 35.1869C28.003 37.1871 29.2531 38.8123 30.7533 38.8123H49.2553C50.7554 38.8123 52.0055 37.1871 52.0055 35.1869Z"
                                  fill="#F2F1EF"
                                />
                                <path
                                  d="M56.6311 16.56C56.0061 15.4349 55.0059 14.8098 53.6308 14.6848H26.3779C25.1277 14.8098 24.0026 15.4349 23.5026 16.56L10.6262 30.9365V54.189C10.6262 57.1893 12.5014 59.6896 15.0016 59.6896H65.007C67.3823 59.6896 69.2575 57.1893 69.2575 54.189V30.9365L56.6311 16.56ZM24.3777 17.3101C24.8777 16.435 25.5028 16.0599 26.3779 15.935H53.6308C54.5059 15.935 55.131 16.435 55.506 17.1851L67.6323 30.9365H54.7559C52.8807 30.9365 51.3805 32.8117 51.3805 35.187C51.3805 36.8122 50.3804 38.1873 49.2553 38.1873H30.7533C29.5032 38.1873 28.6281 36.8122 28.6281 35.187C28.6281 32.8117 27.128 30.9365 25.2528 30.9365H12.3763L24.3777 17.3101ZM68.1323 54.189C68.1323 56.4393 66.7572 58.4395 65.132 58.4395H15.0016C13.2515 58.4395 11.8763 56.5643 11.8763 54.189V32.1867H25.2528C26.3779 32.1867 27.378 33.5618 27.378 35.312C27.378 37.6873 28.8781 39.5625 30.7533 39.5625H49.2553C51.1306 39.5625 52.6307 37.6873 52.6307 35.312C52.6307 33.6868 53.6308 32.3117 54.7559 32.3117H68.0073V54.189H68.1323Z"
                                  fill="#E6E4E3"
                                />
                              </g>
                              <defs>
                                <clippath
                                  id="clip0_1412_15009"
                                >
                                  <rect
                                    fill="white"
                                    height="80"
                                    width="80"
                                  />
                                </clippath>
                              </defs>
                            </svg>
                          </div>
                          <div
                            class="ant-empty-description"
                          >
                            <span
                              class="no-data-cont"
                            >
                              暂无已设例外的规则
                            </span>
                          </div>
                          <div
                            class="ant-empty-footer"
                          />
                        </div>
                      </div>
                    </section>
                  </div>
                </div>
                <section
                  class="wrapper-item"
                >
                  <div
                    class="title-wrap"
                  >
                    <h3
                      class="ant-typography css-dev-only-do-not-override-txh9fw"
                    >
                      SQL语句
                    </h3>
                    <div
                      class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-right: 8px;"
                      >
                        <span
                          class="ant-tag ant-tag-default ellipsis-column-width basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-txh9fw"
                        >
                          <svg
                            color="#4583FF"
                            height="18"
                            viewBox="0 0 18 19"
                            width="18"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M15 17H3a.75.75 0 0 1-.75-.75V2.75A.75.75 0 0 1 3 2h12a.75.75 0 0 1 .75.75v13.5A.75.75 0 0 1 15 17M6 5.75v1.5h6v-1.5zm0 3v1.5h6v-1.5zm0 3v1.5h3.75v-1.5z"
                              fill="currentColor"
                            />
                          </svg>
                          <span>
                            <span
                              class="sql-source-title"
                            >
                              所在文件
                            </span>
                            <div
                              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line margin-bottom-0 sql-source-content basic-typography-ellipsis css-wgj5gs css-dev-only-do-not-override-txh9fw"
                            >
                              file_source/file_1/file_2/file_3/file_4/file_5/source.sql
                            </div>
                          </span>
                        </span>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <span
                          class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-txh9fw"
                        >
                          <svg
                            height="18"
                            viewBox="0 0 1024 1024"
                            width="18"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M512 938.667c-53.333 0-384-257.259-384-469.334s171.925-384 384-384 384 171.926 384 384-330.667 469.334-384 469.334m0-352c64.8 0 117.333-52.534 117.333-117.334S576.8 352 512 352s-117.333 52.533-117.333 117.333S447.2 586.667 512 586.667"
                              fill="#4583FF"
                            />
                          </svg>
                          <span>
                            <span
                              class="sql-source-title"
                            >
                              所在行
                            </span>
                            3
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="wrapper-cont"
                  >
                    <input
                      class="actiontech-sql-view-only-editor-renderer-wrapper custom-monaco-editor css-baixa9"
                      height="90%"
                      language="sql"
                      options="{"readOnly":true,"automaticLayout":true,"minimap":{"enabled":false},"fontFamily":"SF Mono","fontSize":14,"fontWeight":"400","lineNumbersMinChars":2,"suggestFontSize":14}"
                      value="select 1"
                      width="100%"
                    />
                  </div>
                </section>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;

exports[`sqle/components/ReportDrawer render snap when showSourceFile is true 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-drawer ant-drawer-right css-dev-only-do-not-override-txh9fw ant-drawer-open"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 720px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content basic-drawer-wrapper drawer-wrapper-no-padding css-1q29jje"
          role="dialog"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-header"
            >
              <div
                class="ant-drawer-header-title"
              >
                <div
                  class="ant-drawer-title"
                >
                  this is a title
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-body"
            >
              <div
                class="closed-icon-custom"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="audit-report-wrapper css-17ud12h"
              >
                <div
                  class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
                >
                  <div>
                    <div
                      aria-busy="true"
                      aria-live="polite"
                      class="ant-spin ant-spin-spinning css-dev-only-do-not-override-txh9fw"
                    >
                      <span
                        class="ant-spin-dot ant-spin-dot-spin"
                      >
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                      </span>
                    </div>
                  </div>
                  <div
                    class="ant-spin-container ant-spin-blur"
                  >
                    <section
                      class="wrapper-item"
                    >
                      <h3
                        class="ant-typography css-dev-only-do-not-override-txh9fw"
                      >
                        审核结果
                      </h3>
                      <div
                        class="wrapper-cont"
                      >
                        <div
                          class="result-item"
                        >
                          <div
                            class=" css-1v03opz"
                          >
                            <div
                              class="css-1avyf41"
                            >
                              <span
                                class="icon-wrapper"
                              />
                              <span
                                class="text-wrapper"
                              >
                                message
                              </span>
                            </div>
                            <div
                              class="annotation-wrapper"
                            >
                              annotation
                            </div>
                          </div>
                        </div>
                      </div>
                    </section>
                    <section
                      class="wrapper-item skipped-rule-wrapper"
                    >
                      <h3
                        class="ant-typography css-dev-only-do-not-override-txh9fw"
                      >
                        已设例外的规则
                      </h3>
                      <div
                        class="wrapper-cont"
                      >
                        <div
                          class="css-dev-only-do-not-override-txh9fw ant-empty is-icon-tips css-19kysfv"
                        >
                          <div
                            class="ant-empty-image"
                          >
                            <svg
                              fill="none"
                              height="80"
                              viewBox="0 0 80 80"
                              width="80"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <g
                                clip-path="url(#clip0_1412_15009)"
                              >
                                <path
                                  d="M0 56.5643C0 61.4398 17.8769 65.3152 40.0043 65.3152C62.1316 65.3152 80.0086 61.4398 80.0086 56.5643C80.0086 51.6887 62.1317 47.8134 40.0043 47.8134C17.8768 47.8134 0 51.6888 0 56.5643Z"
                                  fill="#EBEAE7"
                                />
                                <path
                                  d="M52.0055 35.1869C52.0055 33.1867 53.2557 31.5615 54.7558 31.5615H68.7573V54.189C68.7573 56.8142 67.1322 59.0645 65.132 59.0645H15.0016C13.0014 59.0645 11.2512 56.9393 11.2512 54.189V31.5615H25.2527C26.7528 31.5615 28.003 33.1867 28.003 35.1869C28.003 37.1871 29.2531 38.8123 30.7533 38.8123H49.2553C50.7554 38.8123 52.0055 37.1871 52.0055 35.1869Z"
                                  fill="#F2F1EF"
                                />
                                <path
                                  d="M56.6311 16.56C56.0061 15.4349 55.0059 14.8098 53.6308 14.6848H26.3779C25.1277 14.8098 24.0026 15.4349 23.5026 16.56L10.6262 30.9365V54.189C10.6262 57.1893 12.5014 59.6896 15.0016 59.6896H65.007C67.3823 59.6896 69.2575 57.1893 69.2575 54.189V30.9365L56.6311 16.56ZM24.3777 17.3101C24.8777 16.435 25.5028 16.0599 26.3779 15.935H53.6308C54.5059 15.935 55.131 16.435 55.506 17.1851L67.6323 30.9365H54.7559C52.8807 30.9365 51.3805 32.8117 51.3805 35.187C51.3805 36.8122 50.3804 38.1873 49.2553 38.1873H30.7533C29.5032 38.1873 28.6281 36.8122 28.6281 35.187C28.6281 32.8117 27.128 30.9365 25.2528 30.9365H12.3763L24.3777 17.3101ZM68.1323 54.189C68.1323 56.4393 66.7572 58.4395 65.132 58.4395H15.0016C13.2515 58.4395 11.8763 56.5643 11.8763 54.189V32.1867H25.2528C26.3779 32.1867 27.378 33.5618 27.378 35.312C27.378 37.6873 28.8781 39.5625 30.7533 39.5625H49.2553C51.1306 39.5625 52.6307 37.6873 52.6307 35.312C52.6307 33.6868 53.6308 32.3117 54.7559 32.3117H68.0073V54.189H68.1323Z"
                                  fill="#E6E4E3"
                                />
                              </g>
                              <defs>
                                <clippath
                                  id="clip0_1412_15009"
                                >
                                  <rect
                                    fill="white"
                                    height="80"
                                    width="80"
                                  />
                                </clippath>
                              </defs>
                            </svg>
                          </div>
                          <div
                            class="ant-empty-description"
                          >
                            <span
                              class="no-data-cont"
                            >
                              暂无已设例外的规则
                            </span>
                          </div>
                          <div
                            class="ant-empty-footer"
                          />
                        </div>
                      </div>
                    </section>
                  </div>
                </div>
                <section
                  class="wrapper-item"
                >
                  <div
                    class="title-wrap"
                  >
                    <h3
                      class="ant-typography css-dev-only-do-not-override-txh9fw"
                    >
                      SQL语句
                    </h3>
                    <div
                      class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-right: 8px;"
                      >
                        <span
                          class="ant-tag ant-tag-default ellipsis-column-width basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-txh9fw"
                        >
                          <svg
                            color="#4583FF"
                            height="18"
                            viewBox="0 0 18 19"
                            width="18"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M15 17H3a.75.75 0 0 1-.75-.75V2.75A.75.75 0 0 1 3 2h12a.75.75 0 0 1 .75.75v13.5A.75.75 0 0 1 15 17M6 5.75v1.5h6v-1.5zm0 3v1.5h6v-1.5zm0 3v1.5h3.75v-1.5z"
                              fill="currentColor"
                            />
                          </svg>
                          <span>
                            <span
                              class="sql-source-title"
                            >
                              所在文件
                            </span>
                            <div
                              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line margin-bottom-0 sql-source-content basic-typography-ellipsis css-wgj5gs css-dev-only-do-not-override-txh9fw"
                            >
                              file_source/file_1/file_2/file_3/file_4/file_5/source.sql
                            </div>
                          </span>
                        </span>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <span
                          class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-txh9fw"
                        >
                          <svg
                            height="18"
                            viewBox="0 0 1024 1024"
                            width="18"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M512 938.667c-53.333 0-384-257.259-384-469.334s171.925-384 384-384 384 171.926 384 384-330.667 469.334-384 469.334m0-352c64.8 0 117.333-52.534 117.333-117.334S576.8 352 512 352s-117.333 52.533-117.333 117.333S447.2 586.667 512 586.667"
                              fill="#4583FF"
                            />
                          </svg>
                          <span>
                            <span
                              class="sql-source-title"
                            >
                              所在行
                            </span>
                            3
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="wrapper-cont"
                  >
                    <input
                      class="actiontech-sql-view-only-editor-renderer-wrapper custom-monaco-editor css-baixa9"
                      height="90%"
                      language="sql"
                      options="{"readOnly":true,"automaticLayout":true,"minimap":{"enabled":false},"fontFamily":"SF Mono","fontSize":14,"fontWeight":"400","lineNumbersMinChars":2,"suggestFontSize":14}"
                      value="select 1"
                      width="100%"
                    />
                  </div>
                </section>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;
